Add lint and lint:fix to package.json

--- a/package.json
+++ b/package.json
@@ -5,8 +5,16 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "npx eslint ./src || exit 0",
+    "lint:fix": "npx eslint ./src --fix || exit 0"
   },
   "author": "Tobias Aihonen",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@lnu/eslint-config": "^1.1.10"
+  },
+  "eslintConfig": {
+    "extends": "@lnu"
+  }
 }
